--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowMessageQueue.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowMessageQueue.java.vm
@@ -28,10 +28,12 @@ import static org.robolectric.util.ReflectionHelpers.ClassParameter.from;
  */
 @Implements(MessageQueue.class)
 public class ShadowMessageQueue {
+
   @RealObject
   private MessageQueue realQueue;
 
-  private Scheduler scheduler = new Scheduler();
+  private Scheduler scheduler;
+
 #if ($api >= 21)
 #set($recycle = "recycleUnchecked")
 #else
@@ -73,17 +75,20 @@ public class ShadowMessageQueue {
     return scheduler;
   }
 
+  public void setScheduler(Scheduler scheduler) {
+    this.scheduler = scheduler;
+  }
+
   public Message getHead() {
     return getField(realQueue, "mMessages");
   }
-  
+
   public void setHead(Message msg) {
     setField(realQueue, "mMessages", msg);
   }
 
   public void reset() {
     setHead(null);
-    scheduler = new Scheduler();
   }
   
   @Implementation
