--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAccessibilityWindowInfo.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAccessibilityWindowInfo.java.vm
@@ -10,8 +10,10 @@ import org.robolectric.annotation.RealObject;
 import org.robolectric.internal.ShadowExtractor;
 import org.robolectric.util.ReflectionHelpers;
 
+import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
 
 /**
  * Shadow of {@link android.view.accessibility.AccessibilityWindowInfo} that allows a test to set
@@ -19,6 +21,10 @@ import java.util.List;
  */
 @Implements(AccessibilityWindowInfo.class)
 public class ShadowAccessibilityWindowInfo {
+
+  private static final Map<StrictEqualityWindowWrapper, StackTraceElement[]> obtainedInstances =
+      new HashMap<>();
+
   private List<AccessibilityWindowInfo> children = null;
 
   private AccessibilityWindowInfo parent = null;
@@ -46,7 +52,108 @@ public class ShadowAccessibilityWindowInfo {
 
   @Implementation
   public static AccessibilityWindowInfo obtain() {
-    return ReflectionHelpers.callConstructor(AccessibilityWindowInfo.class);
+    final AccessibilityWindowInfo obtainedInstance =
+        ReflectionHelpers.callConstructor(AccessibilityWindowInfo.class);
+    StrictEqualityWindowWrapper wrapper = new StrictEqualityWindowWrapper(obtainedInstance);
+    obtainedInstances.put(wrapper, Thread.currentThread().getStackTrace());
+    return obtainedInstance;
+  }
+
+  @Implementation
+  public static AccessibilityWindowInfo obtain(AccessibilityWindowInfo window) {
+    final ShadowAccessibilityWindowInfo shadowInfo =
+        ((ShadowAccessibilityWindowInfo) ShadowExtractor.extract(window));
+    final AccessibilityWindowInfo obtainedInstance = shadowInfo.getClone();
+    StrictEqualityWindowWrapper wrapper = new StrictEqualityWindowWrapper(obtainedInstance);
+    obtainedInstances.put(wrapper, Thread.currentThread().getStackTrace());
+    return obtainedInstance;
+  }
+
+  private AccessibilityWindowInfo getClone() {
+    final AccessibilityWindowInfo newInfo =
+        ReflectionHelpers.callConstructor(AccessibilityWindowInfo.class);
+    final ShadowAccessibilityWindowInfo newShadow =
+        (ShadowAccessibilityWindowInfo) ShadowExtractor.extract(newInfo);
+
+    newShadow.boundsInScreen = new Rect(boundsInScreen);
+    newShadow.parent = parent;
+    newShadow.rootNode = rootNode;
+    newShadow.type = type;
+    newShadow.layer = layer;
+    newShadow.id = id;
+    newShadow.isAccessibilityFocused = isAccessibilityFocused;
+    newShadow.isActive = isActive;
+    newShadow.isFocused = isFocused;
+
+    return newInfo;
+  }
+
+  /**
+   * Clear list of obtained instance objects. {@code areThereUnrecycledWindows} will always
+   * return false if called immediately afterwards.
+   */
+  public static void resetObtainedInstances() {
+    obtainedInstances.clear();
+  }
+
+  /**
+   * Check for leaked objects that were {@code obtain}ed but never
+   * {@code recycle}d.
+   *
+   * @param printUnrecycledWindowsToSystemErr - if true, stack traces of calls
+   *        to {@code obtain} that lack matching calls to {@code recycle} are
+   *        dumped to System.err.
+   * @return {@code true} if there are unrecycled windows
+   */
+  public static boolean areThereUnrecycledWindows(boolean printUnrecycledWindowsToSystemErr) {
+    if (printUnrecycledWindowsToSystemErr) {
+      for (final StrictEqualityWindowWrapper wrapper : obtainedInstances.keySet()) {
+        final ShadowAccessibilityWindowInfo shadow =
+            ((ShadowAccessibilityWindowInfo) ShadowExtractor.extract(wrapper.mInfo));
+
+        System.err.println(String.format(
+            "Leaked type = %d, id = %d. Stack trace:", shadow.getType(), shadow.getId()));
+        for (final StackTraceElement stackTraceElement : obtainedInstances.get(wrapper)) {
+          System.err.println(stackTraceElement.toString());
+        }
+      }
+    }
+
+    return (obtainedInstances.size() != 0);
+  }
+
+  @Override
+  @Implementation
+  public boolean equals(Object object) {
+    if (!(object instanceof AccessibilityWindowInfo)) {
+      return false;
+    }
+
+    final AccessibilityWindowInfo window = (AccessibilityWindowInfo) object;
+    final AccessibilityWindowInfo otherShadow =
+        (AccessibilityWindowInfo) ShadowExtractor.extract(window);
+
+    boolean areEqual = (type == otherShadow.getType());
+    areEqual &= (parent == otherShadow.getParent());
+    areEqual &= (rootNode == otherShadow.getRoot());
+    areEqual &= (layer == otherShadow.getLayer());
+    areEqual &= (id == otherShadow.getId());
+    areEqual &= (isAccessibilityFocused == otherShadow.isAccessibilityFocused());
+    areEqual &= (isActive == otherShadow.isActive());
+    areEqual &= (isFocused == otherShadow.isFocused());
+    Rect anotherBounds = new Rect();
+    otherShadow.getBoundsInScreen(anotherBounds);
+    areEqual &= (boundsInScreen.equals(anotherBounds));
+    return areEqual;
+  }
+
+  @Override
+  @Implementation
+  public int hashCode() {
+    // This is 0 for a reason. If you change it, you will break the obtained instances map in
+    // a manner that is remarkably difficult to debug. Having a dynamic hash code keeps this
+    // object from being located in the map if it was mutated after being obtained.
+    return 0;
   }
 
   @Implementation
@@ -161,6 +268,33 @@ public class ShadowAccessibilityWindowInfo {
     children.add(child);
     ((ShadowAccessibilityWindowInfo) ShadowExtractor.extract(child)).parent =
         mRealAccessibilityWindowInfo;
+  }
+
+  /**
+   * Private class to keep different windows referring to the same window straight
+   * in the mObtainedInstances map.
+   */
+  private static class StrictEqualityWindowWrapper {
+    public final AccessibilityWindowInfo mInfo;
+
+    public StrictEqualityWindowWrapper(AccessibilityWindowInfo info) {
+      mInfo = info;
+    }
+
+    @Override
+    public boolean equals(Object object) {
+      if (object == null) {
+        return false;
+      }
+
+      final StrictEqualityWindowWrapper wrapper = (StrictEqualityWindowWrapper) object;
+      return mInfo == wrapper.mInfo;
+    }
+
+    @Override
+    public int hashCode() {
+      return mInfo.hashCode();
+    }
   }
 }
 #else
