--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/fakes/BaseCursor.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/fakes/BaseCursor.java.vm
@@ -199,6 +199,13 @@ public class BaseCursor implements Cursor {
     throw new UnsupportedOperationException();
   }
 
+#if ($api >= 23)
+  @Override
+  public void setExtras(Bundle extras) {
+    throw new UnsupportedOperationException();
+  }
+#end
+
   @Override
   public Bundle getExtras() {
     throw new UnsupportedOperationException();
