--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowDisplayManagerGlobal.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowDisplayManagerGlobal.java.vm
@@ -10,6 +10,8 @@ import org.robolectric.internal.Shadow;
 import org.robolectric.util.ReflectionHelpers;
 import org.robolectric.util.ReflectionHelpers.ClassParameter;
 
+import android.view.Display;
+
 /**
  * Shadow for {@link android.hardware.display.DisplayManagerGlobal}.
  */
@@ -25,7 +27,11 @@ public class ShadowDisplayManagerGlobal {
 
   @Implementation
   public Object getDisplayInfo(int displayId) {
-    return Shadow.newInstanceOf("android.view.DisplayInfo");
+    Object result = Shadow.newInstanceOf("android.view.DisplayInfo");
+    #if ($api >= 23)
+    ReflectionHelpers.setField(result, "supportedModes", new Display.Mode[] { new Display.Mode(0, 0, 0, 0.0f) });
+    #end
+    return result;
   }
 }
 
