More   public void removeSyncBarrier(int token) from ShadowLooper to ShadowMessageQueue since Looper.removeSyncBarrier() calls through to MessageQueue.removeSyncBarrier() and ViewRootImpl now calls looper.getQueue().removeSyncBarrier() in api 23 rather than looper.removeSyncBarrier()

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowMessageQueue.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowMessageQueue.java.vm
@@ -134,6 +134,10 @@ public class ShadowMessageQueue {
     return retval;
   }
 
+  @HiddenApi @Implementation
+  public void removeSyncBarrier(int token) {
+  }
+
   private static void dispatchMessage(Message msg) {
     final Handler target = msg.getTarget();
     
