tzdata location has changed. Update this in ShadowMemoryMappedFile.
Update ShadowDateUtilsTest.formatDateTime_worksSinceKitKat to run on LOLLIPOP_MR1 - cannot yet run on M since the following resource "android/icu/impl/data/icudt55b/likelySubtags" is not available in the android.jar. The previous version (api 22) version of the android.jar includes android/icu/impl/data/icudt53b so I assume that the build script needs updating.

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowMemoryMappedFile.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowMemoryMappedFile.java.vm
@@ -29,10 +29,11 @@ public class ShadowMemoryMappedFile {
     private byte[] bytes;
     private static final String TZ_DATA_1 = "/misc/zoneinfo/tzdata";
     private static final String TZ_DATA_2 = "/usr/share/zoneinfo/tzdata";
+    private static final String TZ_DATA_3 = "/misc/zoneinfo/current/tzdata";
 
     @Implementation
     public static MemoryMappedFile mmapRO(String path) throws ErrnoException {
-        if (path.endsWith(TZ_DATA_1) || path.endsWith(TZ_DATA_2)) {
+        if (path.endsWith(TZ_DATA_1) || path.endsWith(TZ_DATA_2) || path.endsWith(TZ_DATA_3)) {
             InputStream is = MemoryMappedFile.class.getResourceAsStream(TZ_DATA_2);
             if (is == null) {
                 throw new ErrnoException("open", -1);
