--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowConnectivityManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowConnectivityManager.java.vm
@@ -127,6 +127,8 @@ public class ShadowConnectivityManager {
   /**
    * Count {@link ConnectivityManager#TYPE_MOBILE} networks as metered.
    * Other types will be considered unmetered.
+   *
+   * @return True if the active network is metered.
    */
   @Implementation
   public boolean isActiveNetworkMetered() {
