--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowPhoneWindow.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowPhoneWindow.java.vm
@@ -15,7 +15,7 @@ import org.robolectric.util.ReflectionHelpers.ClassParameter;
 import static org.robolectric.internal.Shadow.directlyOn;
 
 /**
- * Shadow for {@link com.android.internal.policy.PhoneWindow}.
+ * Shadow for com.android.internal.policy.PhoneWindow.
  */
 @Implements(value = PhoneWindow.class, isInAndroidSdk = false)
 public class ShadowPhoneWindow extends ShadowWindow {
